<resources>
    <string name="app_name">SFCC</string>
    <string name="enter_full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_signed_in">Already Registered?</string>
    <string name="welcome_username">Welcome Arkaza</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="tutors">Tutors</string>
    <string name="model_sets">Model Sets</string>
    <string name="test_yourself">Test Yourself</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="welcome_user_text">Welcome</string>
    <string name="hint_username">Username</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="class_9">Class 9</string>
    <string name="class_8">Class 8</string>
    <string name="class_10">Class 10</string>
    <string name="hindi_grammer">Hindi Grammer</string>
    <string name="eng_grammer">English Grammer</string>
    <string name="class_10_crash_course">Class 10 Crash Course</string>
    <string name="enter_mobile_no">Mobile No.</string>
    <string name="not_a_user">Not a user?Sign up here.</string>
    <string name="send_forget_password_link">Send Reset Password Link</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_no">Your Phone No</string>
    <string name="your_email">Your email</string>
    <string name="save_btn">Save</string>
    <string name="class_x_chaper_title">Chapter Title</string>
    <string name="class_x_chaper_descp">Chapter Description</string>
    <string name="about_babusaheb_sirjee">I have experience of more than 30 years of teaching brilliant students like you.
        I am going to teach Maths in-depth for class tenth according to the new pattern. I will give my best to clear the concepts, all your doubts and make you a superstar in your academics. Feel free to ask your doubts.
        let us enjoy these tutorials together.
    </string>
    <string name="about_contact_us_instagram">
         https://www.instagram.com/babusahebsirjee
    </string>
    <string name="about_contact_us_facebook">
        https://www.facebook.com/babusaheb.sirjee
    </string>
    <string name="about_contact_us_youtube">
         https://www.youtube.com/c/StudentFriendsCoachingCentre/featured
    </string>

    <string name="about_contact_us_email">babhusahebsirjee1966@gmail.com</string>
    <string name="about_contact_us_number">Phone no:  9801466755</string>

    <!-- <string name="logo_descp">Student's Friend's Coaching Centre</string> -->
    <string name="user_insrtruction">इस चैप्टर के अगले वीडियो में जाने के लिए सबसे पहले इस वीडियो पर क्लिक करें। इसके बाद दाईं ओर दिए गए तीर पर क्लिक करें।
    पिछले वीडियो पर जाने के लिए बाईं ओर के तीर पर क्लिक करें। हैप्पी लर्निंग!</string>
    <string name="user_insrtruction_crash_course_x">इस कोर्स के अगले वीडियो में जाने के लिए सबसे पहले इस वीडियो पर क्लिक करें। इसके बाद दाईं ओर दिए गए तीर पर क्लिक करें।
    पिछले वीडियो पर जाने के लिए बाईं ओर के तीर पर क्लिक करें। हैप्पी लर्निंग!</string>
    <string name="enter_city_name">Enter city name</string>

</resources>
