<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/background_layout">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome to Student's Friend's Coaching Centre"
            android:textColor="@color/black_text_color"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15sp"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_auth"
            android:hint="@string/enter_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="22sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_auth"
            android:hint="@string/enter_password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="22sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_layout"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/white_color"
            android:background="@drawable/login_button_background"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@color/white_color"
            android:textAllCaps="false"
            android:layout_marginLeft="40dp"
            android:background="@drawable/register_button_background"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/class_10_layout_bck"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/not_a_user"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black_text_color"

            />
        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:id="@+id/register_button"
            android:textColor="@color/white_color"
            android:textAllCaps="false"
            android:layout_marginLeft="30dp"
            android:background="@drawable/register_button_background"
            />

    </LinearLayout>


</LinearLayout>