<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/default_profile"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="Change Profile"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/change_profile_btn"
                android:layout_marginLeft="10dp"
                android:background="@drawable/login_button_background"
                android:text="@string/save_btn"
                android:textAllCaps="false"
                android:textColor="@color/white_color" />


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="350dp"
            android:orientation="horizontal"


            >

            <ImageView
                android:id="@+id/user_pic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/your_name"
                android:textColor="@color/black_text_color"
                android:textSize="20sp" />


        </LinearLayout>
        <View style="@style/Divider.Horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"


            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/phone"
                android:id="@+id/phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/phone_no"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/your_phone_no"
                android:textColor="@color/black_text_color"
                android:textSize="20sp" />


        </LinearLayout>

        <View style="@style/Divider.Horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"


            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/email"
                android:id="@+id/email_img"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/your_email"
                android:id="@+id/email_id"
                android:textSize="20sp"
                android:textColor="@color/black_text_color"

                />


        </LinearLayout>


        <View style="@style/Divider.Horizontal"/>
    </LinearLayout>


</RelativeLayout>